# remote-control

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  hatch_build.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
frontend/: index.html
frontend/src/: App.tsx  api.ts  cache.ts  constants.ts  hooks.ts  styles.css  types.ts  view-model.ts
frontend/src/components/: InfoPane.tsx
src/uv_agent_remote_control/: __init__.py  service.py
src/uv_agent_remote_control/web/: app.js  index.html  styles.css
src/uv_agent_remote_control/web/chunks/: vendor-AO4N8xmZ.js  vendor-DCUBGlbO.js
tests/: test_plugin.py
